--- a/Información del IAM.html
+++ b/Información del IAM.html
@@ -30,7 +30,7 @@
     </section>
     <div class="card-group">
   <div class="card">
-    <img src="vision.jpg" class="card-img-top" alt="...">
+    <img src="alumnos2.jpg" class="card-img-top" alt="..." width=" 250" height="300">
     <div class="card-body">
       <h5 class="card-title">"Cada Día Tratando De ser Mejores"</h5>
       <p class="card-text">Cada día damos todo por nuestros alumnos para que cada día que pasa podamos dar lo mejor a nuestros alumnos poniendo la confianza en nuestros docences y alumnos.</p>
