--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header>
-        <h1>Instituto Armando Martínez</h1>
         <nav>
             <ul>                   <li><a href="index1.html">inicio</a> </li>
                                 
@@ -22,7 +21,7 @@
                 <li><a href="Informaci%C3%B3n%20del%20IAM.html">Información</a> </li>
                 <li><a href="menu3.html">Docentes </a> </li>
                                   <li><a href="concejera.html">consejera(a) </a> </li>
-                                                  <li><a href="Galeria.html">Galeria(a) </a> </li>
+                                                  <li><a href="Galeria.html">Galeria </a> </li>
 
      
             </ul>
@@ -31,8 +30,8 @@
     </header>
     <div class="card mb-3">
   <div class="card-body">
-    <h3 class="card-title"> BIENVENIDO INSTITUTO PROFESOR ARMANDO MARTÍNEZ</h3>
-    <p class="card-text"><h3>El Paraíso,El Paraíso</h3> <p>
+    <h1 class="card-title"> BIENVENIDO INSTITUTO PROFESOR ARMANDO MARTÍNEZ</h1>
+    <p class="card-text"><h2>El Paraíso,El Paraíso</h2> <p>
     <p class="card-text"><small class="text-body-secondary"></small></p>
   </div>
         <center> <img src="hogoIAM..jpg" class="img-fluid rounded-start" alt="..."  width="100" height="100"></center>
