--- a/wowslider-howto.html
+++ b/wowslider-howto.html
@@ -106,15 +106,57 @@
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/hogoiam..jpg" alt="IAM" title="IAM" id="wows1_0"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/iam.jpg" alt="jquery carousel slider" title="IAM" id="wows1_1"/></a></li>
-		<li><img src="data1/images/ian.jpg" alt="IAM" title="IAM" id="wows1_2"/></li>
+		<li><img src="data1/images/arbolll.jpg" alt="arbolll" title="arbolll" id="wows1_0"/></li>
+		<li><img src="data1/images/arco.jpg" alt="arco" title="arco" id="wows1_1"/></li>
+		<li><img src="data1/images/arrrrr.jpg" alt="arrrrr" title="arrrrr" id="wows1_2"/></li>
+		<li><img src="data1/images/descarga.jpg" alt="descarga" title="descarga" id="wows1_3"/></li>
+		<li><img src="data1/images/fondo2.jpg" alt="fondo2" title="fondo2" id="wows1_4"/></li>
+		<li><img src="data1/images/fuego.jpg" alt="fuego" title="fuego" id="wows1_5"/></li>
+		<li><img src="data1/images/fugooo.jpg" alt="fugooo" title="fugooo" id="wows1_6"/></li>
+		<li><img src="data1/images/i.a.m.jpg" alt="I.A.M" title="I.A.M" id="wows1_7"/></li>
+		<li><img src="data1/images/iam.jpg" alt="IAM" title="IAM" id="wows1_8"/></li>
+		<li><img src="data1/images/imagen..jpg" alt="imagen." title="imagen." id="wows1_9"/></li>
+		<li><img src="data1/images/images_1.jpg" alt="images (1)" title="images (1)" id="wows1_10"/></li>
+		<li><img src="data1/images/images_2.jpg" alt="images (2)" title="images (2)" id="wows1_11"/></li>
+		<li><img src="data1/images/images_3.jpg" alt="images (3)" title="images (3)" id="wows1_12"/></li>
+		<li><img src="data1/images/images_4.jpg" alt="images (4)" title="images (4)" id="wows1_13"/></li>
+		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_14"/></li>
+		<li><img src="data1/images/joven.jpg" alt="joven" title="joven" id="wows1_15"/></li>
+		<li><img src="data1/images/joven2.jpg" alt="joven2" title="joven2" id="wows1_16"/></li>
+		<li><img src="data1/images/kemal.jpg" alt="kemal" title="kemal" id="wows1_17"/></li>
+		<li><img src="data1/images/labio_de_mujer.jpg" alt="labio de mujer" title="labio de mujer" id="wows1_18"/></li>
+		<li><img src="data1/images/labios_2.jpg" alt="labios 2" title="labios 2" id="wows1_19"/></li>
+		<li><img src="data1/images/lavios..jpg" alt="lavios." title="lavios." id="wows1_20"/></li>
+		<li><img src="data1/images/manos.jpg" alt="manos" title="manos" id="wows1_21"/></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/mujer_3.jpg" alt="javascript slider" title="mujer 3" id="wows1_22"/></a></li>
+		<li><img src="data1/images/mundoo.jpg" alt="mundoo" title="mundoo" id="wows1_23"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="IAM"><span><img src="data1/tooltips/hogoiam..jpg" alt="IAM"/>1</span></a>
-		<a href="#" title="IAM"><span><img src="data1/tooltips/iam.jpg" alt="IAM"/>2</span></a>
-		<a href="#" title="IAM"><span><img src="data1/tooltips/ian.jpg" alt="IAM"/>3</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">javascript slider</a> by WOWSlider.com v9.0</div>
+		<a href="#" title="arbolll"><span><img src="data1/tooltips/arbolll.jpg" alt="arbolll"/>1</span></a>
+		<a href="#" title="arco"><span><img src="data1/tooltips/arco.jpg" alt="arco"/>2</span></a>
+		<a href="#" title="arrrrr"><span><img src="data1/tooltips/arrrrr.jpg" alt="arrrrr"/>3</span></a>
+		<a href="#" title="descarga"><span><img src="data1/tooltips/descarga.jpg" alt="descarga"/>4</span></a>
+		<a href="#" title="fondo2"><span><img src="data1/tooltips/fondo2.jpg" alt="fondo2"/>5</span></a>
+		<a href="#" title="fuego"><span><img src="data1/tooltips/fuego.jpg" alt="fuego"/>6</span></a>
+		<a href="#" title="fugooo"><span><img src="data1/tooltips/fugooo.jpg" alt="fugooo"/>7</span></a>
+		<a href="#" title="I.A.M"><span><img src="data1/tooltips/i.a.m.jpg" alt="I.A.M"/>8</span></a>
+		<a href="#" title="IAM"><span><img src="data1/tooltips/iam.jpg" alt="IAM"/>9</span></a>
+		<a href="#" title="imagen."><span><img src="data1/tooltips/imagen..jpg" alt="imagen."/>10</span></a>
+		<a href="#" title="images (1)"><span><img src="data1/tooltips/images_1.jpg" alt="images (1)"/>11</span></a>
+		<a href="#" title="images (2)"><span><img src="data1/tooltips/images_2.jpg" alt="images (2)"/>12</span></a>
+		<a href="#" title="images (3)"><span><img src="data1/tooltips/images_3.jpg" alt="images (3)"/>13</span></a>
+		<a href="#" title="images (4)"><span><img src="data1/tooltips/images_4.jpg" alt="images (4)"/>14</span></a>
+		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>15</span></a>
+		<a href="#" title="joven"><span><img src="data1/tooltips/joven.jpg" alt="joven"/>16</span></a>
+		<a href="#" title="joven2"><span><img src="data1/tooltips/joven2.jpg" alt="joven2"/>17</span></a>
+		<a href="#" title="kemal"><span><img src="data1/tooltips/kemal.jpg" alt="kemal"/>18</span></a>
+		<a href="#" title="labio de mujer"><span><img src="data1/tooltips/labio_de_mujer.jpg" alt="labio de mujer"/>19</span></a>
+		<a href="#" title="labios 2"><span><img src="data1/tooltips/labios_2.jpg" alt="labios 2"/>20</span></a>
+		<a href="#" title="lavios."><span><img src="data1/tooltips/lavios..jpg" alt="lavios."/>21</span></a>
+		<a href="#" title="manos"><span><img src="data1/tooltips/manos.jpg" alt="manos"/>22</span></a>
+		<a href="#" title="mujer 3"><span><img src="data1/tooltips/mujer_3.jpg" alt="mujer 3"/>23</span></a>
+		<a href="#" title="mundoo"><span><img src="data1/tooltips/mundoo.jpg" alt="mundoo"/>24</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery image slider</a> by WOWSlider.com v9.0</div>
 <div class="ws_shadow"></div>
 </div>	
 <script type="text/javascript" src="engine1/wowslider.js"></script>
@@ -123,7 +165,7 @@
 
 
 <div class="instuction">
-	<p class="note">HTML code for the slider <a href="file:///C:/Users/AMG1/Desktop/Tareas de el Profe Byron/wowslider.html">C:/Users/AMG1/Desktop/Tareas de el Profe Byron/wowslider.html</a></p>
+	<p class="note">HTML code for the slider <a href="file:///C:/Users/AMG1/Desktop/wowslider.html">C:/Users/AMG1/Desktop/wowslider.html</a></p>
 
 	<h1>
 		How to add this slider to HTML page
@@ -133,7 +175,7 @@
 	<ul>
 		<li class="mono">data1/</li>
 		<li class="mono">engine1/</li>
-		<li class="note">Current location: <a href="file:///C:/Users/AMG1/Desktop/Tareas de el Profe Byron">C:/Users/AMG1/Desktop/Tareas de el Profe Byron</a>. <br>These folders should be located in the same folder as your html page</li>
+		<li class="note">Current location: <a href="file:///C:/Users/AMG1/Desktop">C:/Users/AMG1/Desktop</a>. <br>These folders should be located in the same folder as your html page</li>
 	</ul>
 
 	<h2><span class="num">2</span> Paste this code to your page between the tags <span class="mono">&lt;head&gt;&lt;/head&gt;</span></h2>
@@ -147,15 +189,57 @@
 	<textarea onclick="this.select()" rows="15">&lt;!-- Start WOWSlider.com BODY section --&gt;
 &lt;div id=&quot;wowslider-container1&quot;&gt;
 &lt;div class=&quot;ws_images&quot;&gt;&lt;ul&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/hogoiam..jpg&quot; alt=&quot;IAM&quot; title=&quot;IAM&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;&lt;img src=&quot;data1/images/iam.jpg&quot; alt=&quot;jquery carousel slider&quot; title=&quot;IAM&quot; id=&quot;wows1_1&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/ian.jpg&quot; alt=&quot;IAM&quot; title=&quot;IAM&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/arbolll.jpg&quot; alt=&quot;arbolll&quot; title=&quot;arbolll&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/arco.jpg&quot; alt=&quot;arco&quot; title=&quot;arco&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/arrrrr.jpg&quot; alt=&quot;arrrrr&quot; title=&quot;arrrrr&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/descarga.jpg&quot; alt=&quot;descarga&quot; title=&quot;descarga&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/fondo2.jpg&quot; alt=&quot;fondo2&quot; title=&quot;fondo2&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/fuego.jpg&quot; alt=&quot;fuego&quot; title=&quot;fuego&quot; id=&quot;wows1_5&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/fugooo.jpg&quot; alt=&quot;fugooo&quot; title=&quot;fugooo&quot; id=&quot;wows1_6&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/i.a.m.jpg&quot; alt=&quot;I.A.M&quot; title=&quot;I.A.M&quot; id=&quot;wows1_7&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/iam.jpg&quot; alt=&quot;IAM&quot; title=&quot;IAM&quot; id=&quot;wows1_8&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/imagen..jpg&quot; alt=&quot;imagen.&quot; title=&quot;imagen.&quot; id=&quot;wows1_9&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images_1.jpg&quot; alt=&quot;images (1)&quot; title=&quot;images (1)&quot; id=&quot;wows1_10&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images_2.jpg&quot; alt=&quot;images (2)&quot; title=&quot;images (2)&quot; id=&quot;wows1_11&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images_3.jpg&quot; alt=&quot;images (3)&quot; title=&quot;images (3)&quot; id=&quot;wows1_12&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images_4.jpg&quot; alt=&quot;images (4)&quot; title=&quot;images (4)&quot; id=&quot;wows1_13&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/images.jpg&quot; alt=&quot;images&quot; title=&quot;images&quot; id=&quot;wows1_14&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/joven.jpg&quot; alt=&quot;joven&quot; title=&quot;joven&quot; id=&quot;wows1_15&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/joven2.jpg&quot; alt=&quot;joven2&quot; title=&quot;joven2&quot; id=&quot;wows1_16&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/kemal.jpg&quot; alt=&quot;kemal&quot; title=&quot;kemal&quot; id=&quot;wows1_17&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/labio_de_mujer.jpg&quot; alt=&quot;labio de mujer&quot; title=&quot;labio de mujer&quot; id=&quot;wows1_18&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/labios_2.jpg&quot; alt=&quot;labios 2&quot; title=&quot;labios 2&quot; id=&quot;wows1_19&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/lavios..jpg&quot; alt=&quot;lavios.&quot; title=&quot;lavios.&quot; id=&quot;wows1_20&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/manos.jpg&quot; alt=&quot;manos&quot; title=&quot;manos&quot; id=&quot;wows1_21&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;&lt;img src=&quot;data1/images/mujer_3.jpg&quot; alt=&quot;javascript slider&quot; title=&quot;mujer 3&quot; id=&quot;wows1_22&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/mundoo.jpg&quot; alt=&quot;mundoo&quot; title=&quot;mundoo&quot; id=&quot;wows1_23&quot;/&gt;&lt;/li&gt;
 	&lt;/ul&gt;&lt;/div&gt;
 	&lt;div class=&quot;ws_bullets&quot;&gt;&lt;div&gt;
-		&lt;a href=&quot;#&quot; title=&quot;IAM&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/hogoiam..jpg&quot; alt=&quot;IAM&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;IAM&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/iam.jpg&quot; alt=&quot;IAM&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;IAM&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/ian.jpg&quot; alt=&quot;IAM&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
-	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;javascript slider&lt;/a&gt; by WOWSlider.com v9.0&lt;/div&gt;
+		&lt;a href=&quot;#&quot; title=&quot;arbolll&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/arbolll.jpg&quot; alt=&quot;arbolll&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;arco&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/arco.jpg&quot; alt=&quot;arco&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;arrrrr&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/arrrrr.jpg&quot; alt=&quot;arrrrr&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;descarga&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/descarga.jpg&quot; alt=&quot;descarga&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;fondo2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/fondo2.jpg&quot; alt=&quot;fondo2&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;fuego&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/fuego.jpg&quot; alt=&quot;fuego&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;fugooo&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/fugooo.jpg&quot; alt=&quot;fugooo&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;I.A.M&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/i.a.m.jpg&quot; alt=&quot;I.A.M&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;IAM&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/iam.jpg&quot; alt=&quot;IAM&quot;/&gt;9&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;imagen.&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/imagen..jpg&quot; alt=&quot;imagen.&quot;/&gt;10&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images (1)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_1.jpg&quot; alt=&quot;images (1)&quot;/&gt;11&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images (2)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_2.jpg&quot; alt=&quot;images (2)&quot;/&gt;12&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images (3)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_3.jpg&quot; alt=&quot;images (3)&quot;/&gt;13&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images (4)&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images_4.jpg&quot; alt=&quot;images (4)&quot;/&gt;14&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;images&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/images.jpg&quot; alt=&quot;images&quot;/&gt;15&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;joven&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/joven.jpg&quot; alt=&quot;joven&quot;/&gt;16&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;joven2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/joven2.jpg&quot; alt=&quot;joven2&quot;/&gt;17&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;kemal&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/kemal.jpg&quot; alt=&quot;kemal&quot;/&gt;18&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;labio de mujer&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/labio_de_mujer.jpg&quot; alt=&quot;labio de mujer&quot;/&gt;19&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;labios 2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/labios_2.jpg&quot; alt=&quot;labios 2&quot;/&gt;20&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;lavios.&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/lavios..jpg&quot; alt=&quot;lavios.&quot;/&gt;21&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;manos&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/manos.jpg&quot; alt=&quot;manos&quot;/&gt;22&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;mujer 3&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/mujer_3.jpg&quot; alt=&quot;mujer 3&quot;/&gt;23&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;mundoo&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/mundoo.jpg&quot; alt=&quot;mundoo&quot;/&gt;24&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;jquery image slider&lt;/a&gt; by WOWSlider.com v9.0&lt;/div&gt;
 &lt;div class=&quot;ws_shadow&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;	
 &lt;script type=&quot;text/javascript&quot; src=&quot;engine1/wowslider.js&quot;&gt;&lt;/script&gt;
