--- a/wowslider.html
+++ b/wowslider.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jquery image slider</title>
+	<title>Wow slider</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Jquery image slider" />
+	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Javascript slider" />
 	
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
@@ -11,62 +11,20 @@
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
-<body style="background-color:#d7d7d7;margin:auto">
+<body style="background-color:transparent;margin:auto">
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/arbolll.jpg" alt="arbolll" title="arbolll" id="wows1_0"/></li>
-		<li><img src="data1/images/arco.jpg" alt="arco" title="arco" id="wows1_1"/></li>
-		<li><img src="data1/images/arrrrr.jpg" alt="arrrrr" title="arrrrr" id="wows1_2"/></li>
-		<li><img src="data1/images/descarga.jpg" alt="descarga" title="descarga" id="wows1_3"/></li>
-		<li><img src="data1/images/fondo2.jpg" alt="fondo2" title="fondo2" id="wows1_4"/></li>
-		<li><img src="data1/images/fuego.jpg" alt="fuego" title="fuego" id="wows1_5"/></li>
-		<li><img src="data1/images/fugooo.jpg" alt="fugooo" title="fugooo" id="wows1_6"/></li>
-		<li><img src="data1/images/i.a.m.jpg" alt="I.A.M" title="I.A.M" id="wows1_7"/></li>
-		<li><img src="data1/images/iam.jpg" alt="IAM" title="IAM" id="wows1_8"/></li>
-		<li><img src="data1/images/imagen..jpg" alt="imagen." title="imagen." id="wows1_9"/></li>
-		<li><img src="data1/images/images_1.jpg" alt="images (1)" title="images (1)" id="wows1_10"/></li>
-		<li><img src="data1/images/images_2.jpg" alt="images (2)" title="images (2)" id="wows1_11"/></li>
-		<li><img src="data1/images/images_3.jpg" alt="images (3)" title="images (3)" id="wows1_12"/></li>
-		<li><img src="data1/images/images_4.jpg" alt="images (4)" title="images (4)" id="wows1_13"/></li>
-		<li><img src="data1/images/images.jpg" alt="images" title="images" id="wows1_14"/></li>
-		<li><img src="data1/images/joven.jpg" alt="joven" title="joven" id="wows1_15"/></li>
-		<li><img src="data1/images/joven2.jpg" alt="joven2" title="joven2" id="wows1_16"/></li>
-		<li><img src="data1/images/kemal.jpg" alt="kemal" title="kemal" id="wows1_17"/></li>
-		<li><img src="data1/images/labio_de_mujer.jpg" alt="labio de mujer" title="labio de mujer" id="wows1_18"/></li>
-		<li><img src="data1/images/labios_2.jpg" alt="labios 2" title="labios 2" id="wows1_19"/></li>
-		<li><img src="data1/images/lavios..jpg" alt="lavios." title="lavios." id="wows1_20"/></li>
-		<li><img src="data1/images/manos.jpg" alt="manos" title="manos" id="wows1_21"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/mujer_3.jpg" alt="javascript slider" title="mujer 3" id="wows1_22"/></a></li>
-		<li><img src="data1/images/mundoo.jpg" alt="mundoo" title="mundoo" id="wows1_23"/></li>
+		<li><img src="data1/images/hogoiam..jpg" alt="IAM" title="IAM" id="wows1_0"/></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/iam.jpg" alt="jquery carousel slider" title="IAM" id="wows1_1"/></a></li>
+		<li><img src="data1/images/ian.jpg" alt="IAM" title="IAM" id="wows1_2"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="arbolll"><span><img src="data1/tooltips/arbolll.jpg" alt="arbolll"/>1</span></a>
-		<a href="#" title="arco"><span><img src="data1/tooltips/arco.jpg" alt="arco"/>2</span></a>
-		<a href="#" title="arrrrr"><span><img src="data1/tooltips/arrrrr.jpg" alt="arrrrr"/>3</span></a>
-		<a href="#" title="descarga"><span><img src="data1/tooltips/descarga.jpg" alt="descarga"/>4</span></a>
-		<a href="#" title="fondo2"><span><img src="data1/tooltips/fondo2.jpg" alt="fondo2"/>5</span></a>
-		<a href="#" title="fuego"><span><img src="data1/tooltips/fuego.jpg" alt="fuego"/>6</span></a>
-		<a href="#" title="fugooo"><span><img src="data1/tooltips/fugooo.jpg" alt="fugooo"/>7</span></a>
-		<a href="#" title="I.A.M"><span><img src="data1/tooltips/i.a.m.jpg" alt="I.A.M"/>8</span></a>
-		<a href="#" title="IAM"><span><img src="data1/tooltips/iam.jpg" alt="IAM"/>9</span></a>
-		<a href="#" title="imagen."><span><img src="data1/tooltips/imagen..jpg" alt="imagen."/>10</span></a>
-		<a href="#" title="images (1)"><span><img src="data1/tooltips/images_1.jpg" alt="images (1)"/>11</span></a>
-		<a href="#" title="images (2)"><span><img src="data1/tooltips/images_2.jpg" alt="images (2)"/>12</span></a>
-		<a href="#" title="images (3)"><span><img src="data1/tooltips/images_3.jpg" alt="images (3)"/>13</span></a>
-		<a href="#" title="images (4)"><span><img src="data1/tooltips/images_4.jpg" alt="images (4)"/>14</span></a>
-		<a href="#" title="images"><span><img src="data1/tooltips/images.jpg" alt="images"/>15</span></a>
-		<a href="#" title="joven"><span><img src="data1/tooltips/joven.jpg" alt="joven"/>16</span></a>
-		<a href="#" title="joven2"><span><img src="data1/tooltips/joven2.jpg" alt="joven2"/>17</span></a>
-		<a href="#" title="kemal"><span><img src="data1/tooltips/kemal.jpg" alt="kemal"/>18</span></a>
-		<a href="#" title="labio de mujer"><span><img src="data1/tooltips/labio_de_mujer.jpg" alt="labio de mujer"/>19</span></a>
-		<a href="#" title="labios 2"><span><img src="data1/tooltips/labios_2.jpg" alt="labios 2"/>20</span></a>
-		<a href="#" title="lavios."><span><img src="data1/tooltips/lavios..jpg" alt="lavios."/>21</span></a>
-		<a href="#" title="manos"><span><img src="data1/tooltips/manos.jpg" alt="manos"/>22</span></a>
-		<a href="#" title="mujer 3"><span><img src="data1/tooltips/mujer_3.jpg" alt="mujer 3"/>23</span></a>
-		<a href="#" title="mundoo"><span><img src="data1/tooltips/mundoo.jpg" alt="mundoo"/>24</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery image slider</a> by WOWSlider.com v9.0</div>
+		<a href="#" title="IAM"><span><img src="data1/tooltips/hogoiam..jpg" alt="IAM"/>1</span></a>
+		<a href="#" title="IAM"><span><img src="data1/tooltips/iam.jpg" alt="IAM"/>2</span></a>
+		<a href="#" title="IAM"><span><img src="data1/tooltips/ian.jpg" alt="IAM"/>3</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">javascript slider</a> by WOWSlider.com v9.0</div>
 	<div class="ws_shadow"></div>
 	</div>	
 	<script type="text/javascript" src="engine1/wowslider.js"></script>
