--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <ul>                   <li><a href="index1.html">inicio</a> </li>
+            <ul>                   <li><a href="index.html">inicio</a> </li>
                                 
                                  <li><a href="Biografia.html">Biografía</a> </li>
 
