--- a/menu3.html
+++ b/menu3.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><b><h3 style="font-style: italic">Instituto Armando Martínez</h3></b></a>
-      <a class="navbar-brand" href="index2.html"><b><h3 style="font-style: italic">INICIO</h3></b></a>
+      <a class="navbar-brand" href="index.html"><b><h3 style="font-style: italic">INICIO</h3></b></a>
 
 
               <li>
