--- a/Director.html
+++ b/Director.html
@@ -17,7 +17,7 @@
             
                 <ul>
                        <na></na>
-               <center> <li><a href="index2.html">Inicio </a></li>
+               <center> <li><a href="index.html">Inicio </a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
                 <li><a href="#contacto"></a></li>
          </center>
