--- a/Docentes.html
+++ b/Docentes.html
@@ -19,7 +19,7 @@
             <ul>
                                 
                 .
-                <li><a href="index2.html">inicio</a> </li>
+                <li><a href="index.html">inicio</a> </li>
                 <li><a href=""> </a> </li>
 
                 
