--- a/programas academicos.html
+++ b/programas academicos.html
@@ -16,8 +16,8 @@
             <ul>
 
                 <center>
-                <li><a href="index2.html">Inicio </a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="index.html">Inicio </a></li>
+                <li><a href="Misi%C3%B3n%20Y%20Visi%C3%B3n.html">Nosotros</a></li>
                 <li><a href="#contacto"></a></li>
             </ul>
         </nav>
