--- a/Servicio Civil.html
+++ b/Servicio Civil.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                                 
-                <li><a href="index2.html">inicio</a> </li>
+                <li><a href="index.html">inicio</a> </li>
                 <li><a href=".html"></a> </li>
 
                 
