--- a/Biografia.html
+++ b/Biografia.html
@@ -43,8 +43,7 @@
 
 <header>
   <h1>Instituto Armando Martínez</h1> 
-<li><a href="index2.html">inicio</a> </li>
-
+<a href="index.html">inicio</a> 
 </header>
      <center> <img src="pro.png" class="card-img-top" alt="..." width="150" height="150">
 
