--- a/concejera.html
+++ b/concejera.html
@@ -36,7 +36,7 @@
     <div class="card">
       <img src="consejera.jfif" class="card-img-top" alt="..." width="300" height="400">
       <div class="card-body">
-        <h5 class="card-title">LIC</h5>
+        <h5 class="card-title">LIC:(consejera)</h5>
         <p class="card-text"></p>
       </div>
     </div>
@@ -45,7 +45,7 @@
     <div class="card">
       <img src="consejera6.jfif" class="card-img-top" alt="..."  width="300px" height="400 px">
       <div class="card-body">
-        <h5 class="card-title">LIC:</h5>
+        <h5 class="card-title">LIC:Esther(consejera)</h5>
         <p class="card-text"></p>
       </div>
     </div>
@@ -54,7 +54,7 @@
     <div class="card">
       <img src="consejera7.jfif" class="card-img-top" alt="..." width="300px" height="400 px">
       <div class="card-body">
-        <h5 class="card-title">LIC:</h5>
+        <h5 class="card-title">LIC:Yaqui(consejera)</h5>
         <p class="card-text"></p>
       </div>
     </div>
@@ -70,7 +70,7 @@
     <div class="card">
       <img src="yanina.jfif" class="card-img-top" alt="..." width="300" height="400">
       <div class="card-body">
-        <h5 class="card-title">LIC</h5>
+        <h5 class="card-title">LIC:Yanina Flores(consejera)</h5>
         <p class="card-text"></p>
       </div>
     </div>
@@ -79,7 +79,7 @@
     <div class="card">
       <img src="lorena.jpg" class="card-img-top" alt="..."  width="300px" height="400 px">
       <div class="card-body">
-        <h5 class="card-title">LIC:</h5>
+        <h5 class="card-title">LIC: Sandra Lorena(consejera) </h5>
         <p class="card-text"></p>
       </div>
     </div>
@@ -88,7 +88,7 @@
     <div class="card">
       <img src="senia.jfif" class="card-img-top" alt="..." width="300px" height="400 px">
       <div class="card-body">
-        <h5 class="card-title">LIC:</h5>
+        <h5 class="card-title">LIC:Senia(orientación)</h5>
         <p class="card-text"></p>
       </div>
     </div>
