--- a/Misión Y Visión.html
+++ b/Misión Y Visión.html
@@ -17,7 +17,7 @@
             <ul>
 
                 <center>
-                <li><a href="index2.html">Inicio </a></li>
+                <li><a href="index.html">Inicio </a></li>
                 <li><a href="Biografia.html"></a></li>
                 <li><a href="programas%20academicos.html">Bachilletatos</a></li>
             </ul>
