--- a/Información del IAM.html
+++ b/Información del IAM.html
@@ -14,7 +14,7 @@
         <h1>Instituto Armando Martínez</h1>
         <nav>
             <ul>
-                                <li><a href="index2.html">inicio</a> </li>
+                                <li><a href="index.html">inicio</a> </li>
 
                 <li><a href="#nosotros"></a></li>
                 <li><a href="#cursos"></a></li>
